--- a/src/app/pages/plat/plat.component.html
+++ b/src/app/pages/plat/plat.component.html
@@ -24,12 +24,12 @@
   
                 <ng-template pTemplate="header">
                     <tr>
-                        <th pSortableColumn="reference" pColumnFilter="reference">Reference<p-sortIcon field="reference"></p-sortIcon></th>
+                        <!-- <th pSortableColumn="reference" pColumnFilter="reference">Reference<p-sortIcon field="reference"></p-sortIcon></th> -->
                         <th pSortableColumn="name" pColumnFilter="name">Nom<p-sortIcon field="name"></p-sortIcon></th>
                         <th pSortableColumn="categorie" pColumnFilter="categorie">Categorie<p-sortIcon field="categorie"></p-sortIcon></th>
   
-                        <th pSortableColumn="estimationPlatAVendre" pColumnFilter="estimationPlatAVendre">Estimation Plat A Vendre<p-sortIcon field="estimationPlatAVendre"></p-sortIcon></th>
-                        <th pSortableColumn="platVendu" pColumnFilter="platVendu">Plat Vendu<p-sortIcon field="platVendu"></p-sortIcon></th>
+                        <!-- <th pSortableColumn="estimationPlatAVendre" pColumnFilter="estimationPlatAVendre">Estimation Plat A Vendre<p-sortIcon field="estimationPlatAVendre"></p-sortIcon></th>
+                        <th pSortableColumn="platVendu" pColumnFilter="platVendu">Plat Vendu<p-sortIcon field="platVendu"></p-sortIcon></th> -->
                         <!--<th pSortableColumn="poids" pColumnFilter="poids">Poids<p-sortIcon field="poids"></p-sortIcon></th>
   
   
@@ -43,14 +43,14 @@
                 </ng-template>
                 <ng-template pTemplate="body" let-dishes>
                     <tr  class="cursor-pointer">
-                      <td (click)="showDishesDetail($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes?.reference}}</td>
+                      <!-- <td (click)="showDishesDetail($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes?.reference}}</td> -->
                       <td (click)="showDishesDetail($event,dishes)" style="width: 35%; min-width: 8rem;">{{dishes?.name}}</td>
                       <!--<td (click)="show($event,dishes)" style="width: 35%; min-width: 8rem;">{{dishes?.address?.address?.label}}</td>-->
   
                       <td (click)="showDishesDetail($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes?.categoryMenu?.name }}</td>
   
-                      <td (click)="show($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes?.estimationPlatAVendre}} </td>
-                      <td (click)="show($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes?.platVendu}} </td>
+                      <!-- <td (click)="show($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes?.estimationPlatAVendre}} </td>
+                      <td (click)="show($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes?.platVendu}} </td> -->
   
                      <!-- <td (click)="show($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes?.poids}} </td>
                       <td (click)="show($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes?.cout }}</td>-->
