Formulaire Nouveau Plat, fixer la qté en gramme et % devant Quantité

--- a/src/app/pages/plat/newdishes/newdishes.component.html
+++ b/src/app/pages/plat/newdishes/newdishes.component.html
@@ -61,7 +61,7 @@
           <div class="field col-3" pTooltip="Saisissez la quantité">
             <label for="">Quantité</label>
             <p-inputNumber mode="decimal" [minFractionDigits]="2" name="quantite" id="quantite"
-              [(ngModel)]="recetteSelectione.net" [showButtons]="true" [min]="0"
+              [(ngModel)]="recetteSelectione.net" [showButtons]="true" [min]="0"  suffix="%"
               (ngModelChange)="changePoid()"></p-inputNumber>
           </div>
 
