--- a/src/app/pages/plat/newdishes/newdishes.component.html
+++ b/src/app/pages/plat/newdishes/newdishes.component.html
@@ -80,7 +80,7 @@
         <div class="info-table">
           <div class="info-header">
             <div class="info-header-cell">Recette</div>
-            <div class="info-header-cell">Quantité %</div>
+            <div class="info-header-cell">Quantité</div>
             <div class="info-header-cell">Cout</div>
             <div class="info-header-cell">Actions</div>
           </div>
