--- a/src/app/pages/planning/planning.component.html
+++ b/src/app/pages/planning/planning.component.html
@@ -63,13 +63,13 @@
         <div class="time-section" *ngFor="let period of ['matin', 'midi', 'soir']">
           <h4 class="period-title">{{ period | titlecase }}</h4>
           <div class="meal-slots">
-            <div class="meal-slot" *ngFor="let slot of currentPlanning[period]" (click)="showDishDetails(slot.id)">
+            <div class="meal-slot" *ngFor="let slot of currentPlanning[period]" (click)="showDishDetails($event,slot.dishesId)">
               <div class="meal-info">
-                <span class="meal-name">{{ getDishName(slot.id) }}</span>
+                <span class="meal-name">{{ slot.dishesId.name }}</span>
                 <span class="separator">|</span>
-                <span class="meal-quantity">Qte : {{ slot.number }}</span>
+                <span class="meal-quantity">Qte : {{ slot.quantite }}</span>
                 <span class="separator">|</span>
-                <span class="meal-category">{{ getDishCategory(slot.id) }}</span>
+                <span class="meal-category">{{ slot.dishesId.categoryMenu.name }}</span>
               </div>
             </div>
             <div class="empty-slot" *ngIf="currentPlanning[period].length === 0">
@@ -174,7 +174,7 @@
                 </select>
               </ng-container>
             </div>
-            <div class="cell" (click)="showDishDetails(planning.refdishes.toString())">
+            <div class="cell" >
               {{ getDishName(planning.refdishes.toString()) }}
             </div>
             <div class="cell">
