--- a/src/app/pages/plat/dish-details-popup/dish-details-popup.component.html
+++ b/src/app/pages/plat/dish-details-popup/dish-details-popup.component.html
@@ -53,7 +53,7 @@
       <div class="info-cell">{{ detail?.quantity | number: '1.0-3' }} G</div>
       <div class="info-cell">{{ detail?.cout | number: '1.0-3' }} {{ usercurrency }}</div>
       <div class="info-cell">{{ (detail?.recipe?.stock ?? 0) * 1000  }} G</div>
-      <div class="info-cell">{{ (detail?.recipe?.stock ?? 0) * (plat?.quantite ?? 0) }}</div>
+      <div class="info-cell">{{ (detail?.quantity ?? 0) * (plat?.quantite ?? 0) }}</div>
 
     </div>
 
