--- a/src/app/pages/plat/dish-details-popup/dish-details-popup.component.html
+++ b/src/app/pages/plat/dish-details-popup/dish-details-popup.component.html
@@ -44,8 +44,8 @@
       <div class="info-header-cell">Recette</div>
       <div class="info-header-cell">Quantité</div>
       <div class="info-header-cell">Coût</div>
-      <div class="info-header-cell">Stock Initiale</div>
-      <div class="info-header-cell">Quantité à planifier</div>
+      <div class="info-header-cell">Stock Initial</div>
+      <div class="info-header-cell">Quantité planifiée</div>
     </div>
 
     <div *ngFor="let detail of compositionDishes" class="info-row">
