change to calendar

--- a/src/app/pages/planning/planning.component.html
+++ b/src/app/pages/planning/planning.component.html
@@ -5,7 +5,7 @@
       <span class="icon">
         <fa-icon [icon]="faList"></fa-icon>
       </span>
-      <span>Planification Globale</span>
+      <span>Calendier</span>
     </button>
     <button class="nav-tab" [class.is-active]="currentView === 'details'" (click)="switchView('details')">
       <span class="icon">
