--- a/src/app/pages/planification/detail-estimation/detail-estimation.component.html
+++ b/src/app/pages/planification/detail-estimation/detail-estimation.component.html
@@ -1,4 +1,5 @@
 
+<div style="text-align: center;"> <h3>Programme du {{ config.data.startDate }} au {{ config.data.endDate }}</h3> </div>
 
 <div style="display: flex; justify-content: space-between; align-items: center; margin: 5px;">
     <div>
@@ -24,8 +25,8 @@
                 <th>Preparation: Liste des recettes</th>
                 <td>Qté initiale convertie en KG</td>
                 <td>Stock avant en KG récupéré dans la recette</td>
-                <td>Qté estimée = Qté initial * Qté totale estimée</td>
-                <td class="highlight">Stock après = stock av - qte estimée</td>
+                <td>Qté planifié = Qté initial * Qté totale planifié</td>
+                <td class="highlight">Stock après = stock av - qte planifié</td>
             </tr>
             <tr  *ngFor="let composition of plat.compositionList" >
                 <td>{{composition?.recipe?.name}}</td>
@@ -61,8 +62,8 @@
                 <th>Liste des Ingrédients</th>
                 <th>Ingrédients: Générer une Preparation (Algo de Preparation)</th>
                 <!-- <th>Stock av récupéré dans la liste des produits</th> -->
-                <th>Qté estimée correspond au poids brut en KG</th>
-                <th>Stock après = stock av - qte estimée</th>
+                <th>Qté planifié correspond au poids brut en KG</th>
+                <th>Stock après = stock av - qte planifié</th>
                 <th>Observation</th>
             </tr>
         </thead>
