--- a/src/app/pages/planification/detail-estimation/detail-estimation.component.html
+++ b/src/app/pages/planification/detail-estimation/detail-estimation.component.html
@@ -1,9 +1,9 @@
 
-<div style="text-align: center;"> <h3>Programme du {{ config.data.startDate }} au {{ config.data.endDate }}</h3> </div>
+<div style="text-align: center;"> <h3>Programme des plats du {{ config.data.startDate }} au {{ config.data.endDate }}</h3> </div>
 
 <div style="display: flex; justify-content: space-between; align-items: center; margin: 5px;">
     <div>
-        <h2>Liste des Plats</h2>
+        <!-- <h2>Liste des Plats</h2> -->
     </div>
     <div>
         <p-button (onClick)="showDialog()" label="la feuille de course" icon="pi pi-eye" />
@@ -13,11 +13,11 @@
  <div class="listdiv"  *ngFor="let plat of data,let k=index">
     <table>
         <thead>
-            <tr>
+            <!-- <tr>
                 <th>Liste des Plats</th>
-            </tr>
+            </tr> -->
             <tr>
-                <th colspan="12" style="text-align: center;">{{plat?.name}} (Nombre de plats planifiés : <b><i>{{ getQuantite(plat.id) }}</i></b>) </th>
+                <th colspan="12" style="text-align: left;">{{plat?.name}} (Nombre de plats planifiés : <b><i>{{ getQuantite(plat.id) }}</i></b>) </th>
             </tr>
         </thead>
         <tbody>
