--- a/src/app/pages/planification/detail-estimation/detail-estimation.component.html
+++ b/src/app/pages/planification/detail-estimation/detail-estimation.component.html
@@ -1,23 +1,18 @@
 
-<div style="text-align: center;"> <h3>Programme des plats du {{ config.data.startDate }} au {{ config.data.endDate }}</h3> </div>
+<div style="text-align: center;"> <h2>Programme des plats du {{ config.data.startDate }} au {{ config.data.endDate }}</h3> </div>
 
 <div style="display: flex; justify-content: space-between; align-items: center; margin: 5px;">
+
     <div>
-        <!-- <h2>Liste des Plats</h2> -->
-    </div>
-    <div>
-        <p-button (onClick)="showDialog()" label="la feuille de course" icon="pi pi-eye" />
+        <p-button (onClick)="showDialog()" label="Générer feuille de course" icon="pi pi-eye" />
     </div>
 </div>
 <!-- Première Table : Preparation -->
  <div class="listdiv"  *ngFor="let plat of data,let k=index">
     <table>
         <thead>
-            <!-- <tr>
-                <th>Liste des Plats</th>
-            </tr> -->
             <tr>
-                <th colspan="12" style="text-align: left;">{{plat?.name}} (Nombre de plats planifiés : <b><i>{{ getQuantite(plat.id) }}</i></b>) </th>
+                <th colspan="12" style="text-align: left;">{{plat?.name}} : <b><i>{{ getQuantite(plat.id) }}</i></b> plat(s) planifié(s) </th>
             </tr>
         </thead>
         <tbody>
