--- a/src/app/pages/planification/detail-estimation/detail-estimation.component.html
+++ b/src/app/pages/planification/detail-estimation/detail-estimation.component.html
@@ -2,7 +2,8 @@
 <div style="text-align: center;"> <h2>Programme des plats du {{ config.data.startDate }} au {{ config.data.endDate }}</h2> </div>
 
 <div style="display: flex; justify-content: space-between; align-items: center; margin: 5px;">
-
+    <div>
+    </div>
     <div>
         <p-button (onClick)="showDialog()" label="Générer feuille de course" icon="pi pi-eye" />
     </div>
