--- a/src/app/pages/planification/detail-estimation/detail-estimation.component.html
+++ b/src/app/pages/planification/detail-estimation/detail-estimation.component.html
@@ -13,9 +13,8 @@
     <table>
         <thead>
             <tr>
-                <th colspan="12" style="text-align: left;">{{plat?.name}} : <b><i>{{ getQuantite(plat.id) }}</i></b> plat(s) planifié(s) </th>
+                <th colspan="12" style="text-align: left;"><b>{{plat?.name}} : <i>{{ getQuantite(plat.id) }}</i></b> plat(s) planifié(s) </th>
             </tr>
-        </thead>
         <tbody>
             <tr>
                 <th>Preparation: Liste des recettes</th>
