--- a/src/app/pages/planning/planning.component.html
+++ b/src/app/pages/planning/planning.component.html
@@ -141,7 +141,7 @@
               type="date" 
               id="endDate" 
               [(ngModel)]="filterEndDate" 
-              class="date-input">
+              class="date-input" (click)="applyDateFilter('filter')">
           </div>
           <button class="filter-button" (click)="applyDateFilter('filter')">
             <fa-icon [icon]="faSearch"></fa-icon> Afficher
