--- a/src/app/pages/plat/dish-details-popup/dish-details-popup.component.html
+++ b/src/app/pages/plat/dish-details-popup/dish-details-popup.component.html
@@ -1,5 +1,5 @@
 <div class="dialog-containe">
-  <h3 class="dialog-title">Plat - {{ plat.dishesId.categoryMenu.name }} </h3>
+ <!---- <h3 class="dialog-title">Plat - {{ plat.dishesId.categoryMenu.name }} </h3> --->
 </div>
 
 <div class="info-table">
