--- a/src/app/pages/planning/planning.component.html
+++ b/src/app/pages/planning/planning.component.html
@@ -133,7 +133,7 @@
               type="date" 
               id="startDate" 
               [(ngModel)]="filterStartDate" 
-              class="date-input" (change)="applyDateFilter('filter')>
+              class="date-input">
           </div>
           <div class="filter-group">
             <label for="endDate">Date fin</label>
