--- a/src/app/pages/planification/detail-estimation/detail-estimation.component.html
+++ b/src/app/pages/planification/detail-estimation/detail-estimation.component.html
@@ -17,17 +17,24 @@
                 <th>Liste des Plats</th>
             </tr> -->
             <tr>
-                <th colspan="12" style="text-align: left;">{{plat?.name}} (Nombre de plats planifiés : <b><i>{{ getQuantite(plat.id) }}</i></b>) </th>
+                <th colspan="12" style="text-align: left;">{{plat.name}} (Nombre de plats planifiés : <b><i>{{ getQuantite(plat.id) }}</i></b>) </th>
             </tr>
         </thead>
         <tbody>
-            <tr>
+            <tr *ngFor="let rec of plat.recipes ">
+                <th>Recettes: {{ rec.recipe.name }}</th>
+                <td>Qté initiale: {{ rec.quantity }}  KG</td>
+                <td>Stock avant: {{ rec.recipe.stock }} </td>
+                <td>Qté planifié : {{ rec.quantity * getQuantite(plat.id) }} </td>
+                <td class="highlight">Stock après : {{ rec.quantity - getQuantite(plat.id) }}</td>
+            </tr>
+            <!-- <tr>
                 <th>Preparation: Liste des recettes</th>
                 <td>Qté initiale convertie en KG</td>
                 <td>Stock avant en KG récupéré dans la recette</td>
                 <td>Qté planifié = Qté initial * Qté totale planifié</td>
                 <td class="highlight">Stock après = stock av - qte planifié</td>
-            </tr>
+            </tr> -->
             <tr  *ngFor="let composition of plat.compositionList" >
                 <td>{{composition?.recipe?.name}}</td>
                 <td>{{composition?.quantityKg  |  number : '.1-5'}}</td>
@@ -56,12 +63,11 @@
     <div class="separator1"></div>
     
     <!-- Deuxième Table : Liste des Ingrédients -->
-    <table>
+    <!-- <table>
         <thead>
             <tr>
                 <th>Liste des Ingrédients</th>
                 <th>Ingrédients: Générer une Preparation (Algo de Preparation)</th>
-                <!-- <th>Stock av récupéré dans la liste des produits</th> -->
                 <th>Qté planifié correspond au poids brut en KG</th>
                 <th>Stock après = stock av - qte planifié</th>
                 <th>Observation</th>
@@ -71,37 +77,14 @@
             <tr *ngFor="let detail of composition.recipe.detailList, let j=index">
                 <td *ngIf="j==0" [rowSpan]="composition.recipe.detailList">{{composition?.recipe?.name}}</td>
                 <td>{{detail?.ingredient?.name}}</td>
-                <!-- <td>{{detail?.ingredient?.stock?.quantity  |  number : '.1-3'}}</td> -->
                 <td>{{detail?.brut  |  number : '.1-3'}}</td>
                 <td>{{detail?.stockApres  |  number : '.1-3'}}</td>
                 <td [ngClass]="{'insufficient': detail.stockApres<0}" ><span *ngIf="detail.stockApres<0" >Insuffisant</span></td>
             </tr>
-            
-            <!--<tr>
-                <td>BEURRE</td>
-                <td>5</td>
-                <td>1,37</td>
-                <td>3,63</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>BROCOLI</td>
-                <td>1,515</td>
-                <td>1,515</td>
-                <td>1,515</td>
-                <td class="insufficient">Insuffisant</td>
-            </tr>
-            <tr>
-                <td>CORNICHPON</td>
-                <td>0</td>
-                <td>0,439</td>
-                <td>-0,439</td>
-                <td class="insufficient">Insuffisant</td>
-            </tr>-->
         </tbody>
     
     </table>
-    <div class="separator"></div>
+    <div class="separator"></div> -->
 
  </div>
 
