--- a/src/app/pages/planification/detail-estimation/detail-estimation.component.scss
+++ b/src/app/pages/planification/detail-estimation/detail-estimation.component.scss
@@ -35,7 +35,7 @@ th {
 }
 .separator {
     height: 10px;
-    background-color: yellow;
+    // background-color: yellow;
     margin: 20px 0;
 }
 
