--- a/src/app/pages/planification/detail-estimation/detail-estimation.component.html
+++ b/src/app/pages/planification/detail-estimation/detail-estimation.component.html
@@ -13,7 +13,7 @@
     <table>
         <thead>
             <tr>
-                <th colspan="12" style="text-align: left;">{{plat.name}} : {{ getQuantite(plat.id) }} Planifié(s)</i></b>) </th>
+                <th colspan="12" style="text-align: left;">{{plat.name}} : {{ getQuantite(plat.id) }} Planifié(s) </th>
             </tr>
         <tbody>
           <tr >
