--- a/src/app/pages/planification/detail-estimation/detail-estimation.component.html
+++ b/src/app/pages/planification/detail-estimation/detail-estimation.component.html
@@ -17,7 +17,7 @@
             </tr>
         <tbody>
           <tr >
-                <th colspan="12" style="text-align: left;>Liste des Recettes</th>
+                <th colspan="12" style="text-align: left;">Liste des Recettes</th>
             </tr>
             <tr *ngFor="let rec of plat.recipes ">
                 <th>{{ rec.recipe.name }}</th>
