--- a/src/app/pages/planification/detail-estimation/detail-estimation.component.html
+++ b/src/app/pages/planification/detail-estimation/detail-estimation.component.html
@@ -17,15 +17,16 @@
             </tr>
         <tbody>
           <tr >
-                <th colspan="12" style="text-align: left;">Liste des Recettes</th>
-            </tr>
-            <tr *ngFor="let rec of plat.recipes">
-                <th>{{ rec.recipe.name }}</th>
+                <th colspan="12" style="text-align: left;">LISTE DES RECETTES</th>
                 <td>Qté initiale KG</td>
                 <td>Stock avant en KG </td>
                 <td>Qté planifié KG</td>
                 <td class="highlight">Stock après KG</td>
             </tr>
+            <!-- <tr *ngFor="let rec of plat.recipes">
+                <th>{{ rec.recipe.name }}</th>
+                
+            </tr>-->
             <!-- <tr>
                 <th>Preparation: Liste des recettes</th>
                 <td>Qté initiale convertie en KG</td>
