--- a/src/app/pages/planification/detail-estimation/detail-estimation.component.html
+++ b/src/app/pages/planification/detail-estimation/detail-estimation.component.html
@@ -23,10 +23,13 @@
                 <td>Qté planifié KG</td>
                 <td class="highlight">Stock après KG</td>
             </tr>
-            <!-- <tr *ngFor="let rec of plat.recipes">
+            <tr *ngFor="let rec of plat.recipes">
                 <th>{{ rec.recipe.name }}</th>
-                
-            </tr>-->
+                <td>{{ rec.recipe.name }}</td>
+                <td>{{ rec.recipe.stock }}</td>
+                <td>{{ rec.recipe.name }}</td>
+                <td>{{ rec.recipe.name }}</td>
+            </tr>
             <!-- <tr>
                 <th>Preparation: Liste des recettes</th>
                 <td>Qté initiale convertie en KG</td>
