--- a/src/app/pages/planification/detail-estimation/detail-estimation.component.html
+++ b/src/app/pages/planification/detail-estimation/detail-estimation.component.html
@@ -17,19 +17,19 @@
             </tr>
         <tbody>
           <tr >
-                <th colspan="12" style="text-align: left;">LISTE DES RECETTES</th>
+                <th colspan="12" style="text-align: left;">*-----LISTE DES RECETTES-----*</th>
                 <td>Qté initiale KG</td>
                 <td>Stock avant en KG </td>
                 <td>Qté planifié KG</td>
                 <td class="highlight">Stock après KG</td>
             </tr>
-            <tr *ngFor="let rec of plat.recipes">
-                <th>{{ rec.recipe.name }}</th>
-                <td>{{ rec.recipe.name }}</td>
-                <td>{{ rec.recipe.stock }}</td>
-                <td>{{ rec.recipe.name }}</td>
-                <td>{{ rec.recipe.name }}</td>
-            </tr>
+            <tr *ngFor="let rec of plat.recipes ">
+                  <th colspan="12" style="text-align: left;">{{ rec.recipe.name }}</th>
+                  <td>{{ rec.quantity }}  KG</td>
+                  <td>{{ rec.recipe.stock }} KG</td>
+                  <td>{{ rec.quantity * getQuantite(plat.id) }} KG</td>
+                  <td class="highlight">{{ rec.quantity - getQuantite(plat.id) }} KG</td>
+              </tr>
             <!-- <tr>
                 <th>Preparation: Liste des recettes</th>
                 <td>Qté initiale convertie en KG</td>
