--- a/src/app/pages/planification/detail-estimation/detail-estimation.component.html
+++ b/src/app/pages/planification/detail-estimation/detail-estimation.component.html
@@ -39,20 +39,7 @@
                 <td>{{composition?.recipe?.qteEstimee  |  number : '.1-5'}}</td>
                 <td class="highlight">{{composition?.recipe?.stockApres  |  number : '.1-5'}}</td>
             </tr>
-            <!--<tr>
-                <td>Ratatouille</td>
-                <td>0,2</td>
-                <td>70</td>
-                <td>40</td>
-                <td class="highlight">30</td>
-            </tr>
-            <tr>
-                <td>Bœuf aux oignons</td>
-                <td>0,3</td>
-                <td>29</td>
-                <td>60</td>
-                <td class="highlight">-31</td>
-            </tr>-->
+            
         </tbody>
     </table>
     
@@ -60,10 +47,10 @@
     <div class="separator1"></div>
     
     <!-- Deuxième Table : Liste des Ingrédients -->
-    <!-- <table>
+    <table>
         <thead>
             <tr>
-                <th>Liste des Ingrédients</th>
+                <th><i>LISTE DES INGREDIENTS</i></th>
                 <th>Ingrédients: Générer une Preparation (Algo de Preparation)</th>
                 <th>Qté planifié correspond au poids brut en KG</th>
                 <th>Stock après = stock av - qte planifié</th>
@@ -81,7 +68,7 @@
         </tbody>
     
     </table>
-    <div class="separator"></div> -->
+    <div class="separator"></div>
 
  </div>
 
