--- a/src/app/pages/planification/detail-estimation/detail-estimation.component.html
+++ b/src/app/pages/planification/detail-estimation/detail-estimation.component.html
@@ -62,10 +62,14 @@
             <tr *ngFor="let detail of composition.recipe.detailList, let j=index">
                 <td *ngIf="j==0" [rowSpan]="composition.recipe.detailList">{{composition?.recipe?.name}}</td>
                 <td>{{detail?.ingredient?.name}}</td>
-                <td>{{detail?.ingredient?.stock?.quantity  |  number : '.1-3'}}</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                 <td></td>
+                 <!--<td>{{detail?.ingredient?.stock?.quantity  |  number : '.1-3'}}</td>
                 <td>{{detail?.brut  |  number : '.1-3'}}</td>
                 <td>{{detail?.stockApres  |  number : '.1-3'}}</td>
-                <td [ngClass]="{'insufficient': detail.stockApres<0}" ><span *ngIf="detail.stockApres<0" >Insuffisant</span></td>
+                <td [ngClass]="{'insufficient': detail.stockApres<0}" ><span *ngIf="detail.stockApres<0" >Insuffisant</span></td>-->
             </tr>
         </tbody>
     
