--- a/src/app/pages/planification/detail-estimation/detail-estimation.component.html
+++ b/src/app/pages/planification/detail-estimation/detail-estimation.component.html
@@ -25,7 +25,7 @@
             </tr>
             <tr *ngFor="let rec of plat.recipes ">
                   <th colspan="12" style="text-align: left;">{{ rec.recipe.name }}</th>
-                  <td>{{ rec.quantity }}  KG</td>
+                  <td>{{ rec.quantity/1000 }}  KG</td>
                   <td>{{ rec.recipe.stock }} KG</td>
                   <td>{{ rec.quantity * getQuantite(plat.id) }} KG</td>
                   <td class="highlight">{{ rec.recipe.stock - rec.quantity * getQuantite(plat.id) }} KG</td>
